testdata/baselines/reference/submodule/conformance/jsDeclarationsMissingTypeParameters.errors.txt
file.js(2,5): error TS8009: The '?' modifier can only be used in TypeScript files.
file.js(2,13): error TS8010: Type annotations can only be used in TypeScript files.
file.js(12,13): error TS8010: Type annotations can only be used in TypeScript files.
file.js(12,19): error TS8020: JSDoc types can only be used inside documentation comments.
file.js(12,20): error TS1099: Type argument list cannot be empty.
file.js(18,13): error TS8010: Type annotations can only be used in TypeScript files.


==== file.js (6 errors) ====
    /**
      * @param {Array=} y desc
        ~~~~~~~~~~~~~~~~~~~~~~
                ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
      */
    ~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
    function x(y) { }
    
    // @ts-ignore
    /** @param {function (Array)} func Invoked
     */
    function y(func) { return; }
    
    /**
     * @return {(Array.<> | null)} list of devices
                ~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                      ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
                       ~~
!!! error TS1099: Type argument list cannot be empty.
     */
    function z() { return null ;}
    
    /**
     * 
     * @return {?Promise} A promise
                ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function w() { return null; }